--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 outcome==1.2.0
 packaging==22.0
+psycopg2-binary==2.9.5
 PySocks==1.7.1
 python-dotenv==0.21.0
 requests==2.28.1
