[GOB-18] - attempt creating java spring boot backend

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -18,6 +18,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.data:spring-data-jpa'
+	implementation 'jakarta.validation:jakarta.validation-api'
+
+
 }
 
 tasks.named('test') {
