--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "aws-amplify": "^5.3.9",
     "bootstrap": "^5.1.3",
     "mapbox-gl": "^2.8.1",
     "react": "^18.0.0",
